name:                datura-corsets
version:             1.0.0
synopsis:            A corset-artist's website made with hakyll
description:         A corset-artist's website made with hakyll
homepage:            http://www.ladatura-corsets.com/
license:             MIT
license-file:        LICENSE
author:              David Sferruzza
maintainer:          david.sferruzza@gmail.com
copyright:           2014 David Sferruzza
category:            Personal
build-type:          Simple
cabal-version:       >=1.10

executable datura-corsets
  main-is:             site.hs
  build-depends:       base == 4.*
                     , hakyll == 4.7.4.0
                     , filepath
                     , blaze-html
                     , time
                     , network
  ghc-options:         -O3 -Wall -threaded
  default-language:    Haskell2010
